--- a/index.html
+++ b/index.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  	<meta charset="utf-8">
-  		<title>Document </title>
-  		<link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+      <title>Document </title>
+      <link rel="stylesheet" href="style.css">
   </head>
-  <body>
-  <div class="deneme"></div>	
+  <body bgcolor="red" text="yellow">
+    <div id="header"> <h1> BERKAY CAĞIN KURU .</h1> </div>
+    <div id="ortala">
+      <div id="left">
+ 
+          <div class="icerik">İçerik1</div>
+          <div class="icerik">İçerik2</div>
+          <div class="icerik">İçerik3</div>
+          <div class="duzelt"></div>
+          <div class="konu">Konu1</div>
+          <div class="konu">Konu2</div>
+      </div>
+      <div id="right">
+      </div>
+    </div>
+    <div class="duzelt"></div>
+  </body>
+</html>
+     <a href="http://google.com.tr"target="_blank">ANA SAYFAYA DÖNME(GOOGLE) </a>
+     <img src="Lighthouse.jpg" 
+  <div class="deneme"></div>  
    <h1> BERKAY CAĞIN KURU .</h1>
-    <P> Bu metnin ilk paragrafıdır. </P>
-    <p> Bu da ikinci paragrafıdır.</p>
+    <P>  <em>  <u> BU METNİN İLK PARAGRAFIDIR </u> . </em> </P>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed 
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad 
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex e
+    consequat. Duis aute irure dolor in reprehenderit in voluptate 
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaec
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <p> <em> <u> BU DA İKİNCİ PARAGRAFIDIR . </u> </em> </p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed 
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
   </body>
-  </html>	
+  </html> 
   
+
+
+
