--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-      <title>Document </title>
-      <link rel="stylesheet" href="style.css">
-  </head>
-  <body bgcolor="red" text="yellow">
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title> Document </title>
+</head>
+<body bgcolor="blue">
+   <body bgcolor="red" text="yellow">
     <div id="header"> <h1> BERKAY CAĞIN KURU .</h1> </div>
     <div id="ortala">
       <div id="left">
- 
-          <div class="icerik">İçerik1</div>
-          <div class="icerik">İçerik2</div>
-          <div class="icerik">İçerik3</div>
-          <div class="duzelt"></div>
-          <div class="konu">Konu1</div>
-          <div class="konu">Konu2</div>
       </div>
       <div id="right">
       </div>
@@ -40,9 +34,40 @@
     quis nostrud exercitation ullamco laboris nisi ut aliquip ex
     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-  </body>
-  </html> 
-  
+   <table border="15".cellspacing="30".cellpadding="15".align="center">
+<caption>  </caption> 
+<tr>
+  <br>
+ <br> -------------------ARAÇ MARKA MODEL TABLOSU----------------
+   <br> <th> ARAÇ MARKA </th>
+  <th> MODEL </th>
+  <th> RENK </th>
+  <th> HIZ </th>
+  <Th> FİYAT </Th>
+</tr>
 
+<td> MERCEDES </td>
+<td> 2018</td>
+<td> KIRMIZI </td>
+<td> 320KM/H </td>
+<td> 500.000 TL </td>
 
+</tr>
 
+<tr>
+<td> BMW </td>
+<td> 2017 </td>
+<td> SARI </td>
+<td> 150 </td>
+<td> 100.000 </td>
+</tr>
+<tr>
+<td> MURAT 131 </td>
+<td> 1998 </td>
+<td> MAVİ </td>
+<td> 90 </td>
+<td> 10.000 </td>
+<td> 
+</tr> 
+</table>
+</html>
