--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta content='HTML5 Template Design' name='description' />
     <meta content='width=device-width, initial-scale=1' name='viewport' />
     <link rel="stylesheet" href="style.css" />
+    <script language="javascript" src="http://ir.sitekodlari.com/takvim1.js"></script>
 </head>
-<body>
+<body bgcolor="skyblue">
     <div id="main-container">
         <header id="header">
             <section> MEGA TURİZM TAŞIMACILIK <br> (Güvenle-Hızlı) </section>
